Fix textarea baselines on mobile layout

--- a/src/styles/marketplaceDefaults.css
+++ b/src/styles/marketplaceDefaults.css
@@ -259,10 +259,10 @@ textarea {
 
   /* Todo: All textareas are using auto-sizing extension which currently calculates required space incorrectly when box-sixing is "border-box" */
   box-sizing: content-box;
-  padding: 0 0 10px 0;
+  padding: 2px 0 8px 0;
 
   &::placeholder {
-    padding: 0 0 10px 0;
+    padding: 0 0 0 0;
   }
 
   @media (--viewportMedium) {
